crates/murphy-plugin-macros/tests/ui/fail_node_pattern_atom_node_match_no_literal.stderr
error: node_pattern!: atom kind `self` cannot be matched as `(self ...)` — use bare kind name `self`
 --> tests/ui/fail_node_pattern_atom_node_match_no_literal.rs:6:1
  |
6 | murphy_plugin_macros::node_pattern!(m, "(self _)");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `murphy_plugin_macros::node_pattern` (in Nightly builds, run with -Z macro-backtrace for more info)
